[package]
name = "kvs"
version = "0.1.0"
description = "A key-value store"
authors = ["lsy <aresli96@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
clap = "2.33.1"
assert_cmd = "1.0.1"
predicates = "1.0.4"