[package]
name = "kvs"
version = "0.1.0"
authors = ["lsy"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
clap = "2.33.1"

[[bin]]
name = "kvs"
test = false

[lib]
name = "kvs"
test = false
doctest = true