[package]
name = "kvs"
version = "0.1.0"
authors = ["lsy"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.0.7"
walkdir = "2.2.7"
clap = "2.33.1"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "kvs"
test = false

[lib]
name = "kvs"
test = false
doctest = true